<resources>
    <string name="app_name">Jenga</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="continue_arrow"><![CDATA[Continue ->]]></string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="favourites">Favourites</string>
</resources>